Updating Feedbacks page

--- a/WebAdmin/public/Feedback.html
+++ b/WebAdmin/public/Feedback.html
@@ -48,14 +48,12 @@
 
 <form class="form-inline my-2 my-lg-0" id="saidae5">
       <input id="txtClientEmail" class="form-control mr-sm-2" id="barra" type="search" placeholder="Pesquisar por usuários" aria-label="Search">
-      <input id="btnNewestFirst" type="checkbox"><strong><p style="color: white;">Mais recentes primeiro</p></strong></input>
-      <input id="btnOldestFirst" type="checkbox"><strong><p style="color: white;">Mais antigos primeiro</p></strong></input>
       <div class="form-group" id="ajuste2">
           <select id="cmbFeedbackType" class="form-control my-2 my-lg-0" id="ajuste3">
          </select>
       </div>
       <strong><p class="mb-1" id="ajuste4">Período:</p></strong>
-      <input id="txtStartDate" placeholder="Data Inicial:" class="form-control mr-sm-2"  id="ajuste2" type='date' id="date"><strong><p class="mb-1" id="ajuste5">--</p></strong>
+      <input id="txtStartDate" placeholder="Data Inicial:" class="form-control mr-sm-2"  id="ajuste2" type='date' id="date">
       <input id="txtEndDate" placeholder="Data Final:" class="form-control mr-sm-2" type="date" id="ajuste2">
 </form>
 
