--- a/WebAdmin/public/Categorias.html
+++ b/WebAdmin/public/Categorias.html
@@ -15,7 +15,7 @@
 <body>
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="Menu.html"><img src="img/ReachUpLogo.jpg" width="30" height="30" class="d-inline-block align-top"> ReachUp</a>
+  <a id="navTitle" class="navbar-brand" href="Menu.html"><img src="img/ReachUpLogo.jpg" width="30" height="30" class="d-inline-block align-top"> ReachUp!</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
