--- a/WebAdmin/public/Feedback.html
+++ b/WebAdmin/public/Feedback.html
@@ -14,9 +14,10 @@
 
 </head>
 <body>
+  <div id="tudo">
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light shadow p-3 mb-5 bg-black rounded">
-  <a class="navbar-brand" href="Menu.html"><img src="img/ReachUpLogo.jpg" width="30" height="30" class="d-inline-block align-top"> ReachUp</a>
+  <a id="navTitle" class="navbar-brand" href="Menu.html"><img src="img/ReachUpLogo.jpg" width="30" height="30" class="d-inline-block align-top"> ReachUp!</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -36,7 +37,7 @@
       </li>
             <li class="nav-item">
         <a class="nav-link" href="Categorias.html" tabindex="-1" >Categorias</a>
-      </li>.
+      </li>
     </ul>
   </div>
 
@@ -47,12 +48,12 @@
 <hr>
 
 <form class="form-inline my-2 my-lg-0" id="saidae5">
-      <input id="txtClientEmail" class="form-control mr-sm-2" id="barra" type="search" placeholder="Pesquisar por usuários" aria-label="Search">
+      <input id="txtClientEmail" class="form-control mr-sm-2" id="barra" type="search" placeholder="Filtrar por email" aria-label="Search">
       <div class="form-group" id="ajuste2">
           <select id="cmbFeedbackType" class="form-control my-2 my-lg-0" id="ajuste3">
          </select>
       </div>
-      <strong><p class="mb-1" id="ajuste4">Período:</p></strong>
+      <hr>
       <input id="txtStartDate" placeholder="Data Inicial:" class="form-control mr-sm-2"  id="ajuste2" type='date' id="date">
       <input id="txtEndDate" placeholder="Data Final:" class="form-control mr-sm-2" type="date" id="ajuste2">
 </form>
@@ -60,6 +61,10 @@
 <div id="feedbacks" class="list-group" id="saidae5">
 </div>
 
+<footer class="navbar-expand-lg navbar-light bg-light shadow p-3 bg-black">
+</footer>
+
+</div>
 <script src='http://code.jquery.com/jquery-2.1.3.min.js'></script>
 <script src="../src/Scripts/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
