--- a/WebAdmin/public/Locais.html
+++ b/WebAdmin/public/Locais.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>.
+<html>
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,7 +15,7 @@
 <body>
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light shadow p-3 mb-5 bg-black rounded">
-  <a class="navbar-brand" href="Menu.html"><img src="img/ReachUpLogo.jpg" width="30" height="30" class="d-inline-block align-top"> ReachUp</a>
+  <a id="navTitle" class="navbar-brand" href="Menu.html"><img src="img/ReachUpLogo.jpg" width="30" height="30" class="d-inline-block align-top"> ReachUp!</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -37,7 +37,7 @@
         <a class="nav-link" href="Categorias.html" tabindex="-1" >Categorias</a>
       </li>
     </ul>
-  </div>
+  </div>.
 </nav>
 
 <h4>Easter egg do ReachUp <3</h4>
@@ -53,6 +53,7 @@
        </select>
        <input id="btnShowOnlyTheAvailable" type="checkbox"><strong><p style="color: white;">Mostrar apenas locais ativos</p></strong></input>
        <input id="btnShowOnlyTheUnavailable" type="checkbox"><strong><p style="color: white;">Mostrar apenas locais desativos</p></strong></input>
+       <input id="btnAddLocal" type="button" value="Adicionar novo">
       </div>
     </form>
 
